updated survey questions

--- a/public/survey.html
+++ b/public/survey.html
@@ -31,7 +31,7 @@
       <h3>Questions:</strong></h3>
       <br>
 
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You like hiking</h4>
       <select class="chosen-select" id="q1">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -42,7 +42,7 @@
       </select>
       <br><br>
 
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You enjoy playing sports</h4>
       <select class="chosen-select" id="q2">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -53,7 +53,7 @@
       </select>
       <br><br>
 
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You like traveling</h4>
       <select class="chosen-select" id="q3">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -64,7 +64,7 @@
       </select>
       <br><br>
 
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You are organized</h4>
       <select class="chosen-select" id="q4">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -75,7 +75,7 @@
       </select>
       <br><br>
 
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You are a runner</h4>
       <select class="chosen-select" id="q5">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -86,7 +86,7 @@
       </select>
       <br><br>
 
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You prefer tea rather than coffee</h4>
       <select class="chosen-select" id="q6">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -97,7 +97,7 @@
       </select>
       <br><br>
 
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You are outgoing</h4>
       <select class="chosen-select" id="q7">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -108,7 +108,7 @@
       </select>
       <br><br>
 
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You would go skydiving</h4>
       <select class="chosen-select" id="q8">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -119,7 +119,7 @@
       </select>
       <br><br>
 
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You are a curious person</h4>
       <select class="chosen-select" id="q9">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -130,7 +130,7 @@
       </select>
       <br><br>
 
-      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <h4>You want to do stand-up comedy someday (don't worry Leah, not tracking your answers)</h4>
       <select class="chosen-select" id="q10">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
@@ -148,7 +148,7 @@
         <i class="fa fa-check-circle"></i> Submit
       </button>
       <br>
-      
+
       <!-- Submit Button -->
       <script src="https://code.jquery.com/jquery.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
